--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ const S = {
   flex1:       { flex:1 },
   flex1MinW0:  { flex:1, minWidth:0 },
   gap10:       { display:"flex", gap:10 },
-  gap6:        { display:"flex", gap:6 },
+  gap6:        { display:"flex", gap:6, overflowX:"auto", paddingBottom:2 },
   grid2col8:   { display:"grid", gridTemplateColumns:"1fr 1fr", gap:8 },
   grid2col10:  { display:"grid", gridTemplateColumns:"1fr 1fr", gap:10 },
   overlay:     { position:"fixed", inset:0, zIndex:200, background:"rgba(0,0,0,0.7)", backdropFilter:"blur(6px)", display:"flex", alignItems:"center", justifyContent:"center", padding:20 },
